syntax = "proto3";

package intr.v1;
option go_package = "intr/v1";


service InteractiveService {
  rpc IncrReadCnt(IncrReadCntRequest) returns (IncrReadCntResponse);
  rpc Like(LikeRequest) returns (LikeResponse);
  rpc CancelLike(CancelLikeRequest) returns (CancelLikeResponse);
  rpc Collect(CollectRequest) returns (CollectResponse);
  rpc CancelCollect(CancelLikeRequest) returns (CancelLikeResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc MustBatchGet(MustBatchGetRequest) returns (MustBatchGetResponse);
  rpc GetByIDs(GetByIDsRequest) returns (GetByIDsResponse);
  rpc GetTopLike(GetTopLikeRequest) returns (GetTopLikeResponse);
}

message IncrReadCntRequest {
  string biz = 1;
  int64 biz_id = 2;
}

message IncrReadCntResponse {
}

message LikeRequest {
  string biz = 1;
  int64 biz_id = 2;
  int64 uid = 3;
}
message LikeResponse {
}

message CancelLikeRequest {
  string biz = 1;
  int64 biz_id = 2;
  int64 uid = 3;
}
message CancelLikeResponse {
}

message CollectRequest {
  string biz = 1;
  int64 id = 2;
  int64 cid = 3;
  int64 uid = 4;
}
message CollectResponse {
}

message CancelCollectRequest {
  string biz = 1;
  int64 id = 2;
  int64 cid = 3;
  int64 uid = 4;
}
message CancelCollectResponse {
}

message GetRequest {
  string biz = 1;
  int64 id = 2;
  int64 uid = 3;
}

message Interactive {
  string biz = 1;
  string biz_id = 2;
  int64 read_cnt = 3;
  int64 like_cnt = 4;
  int64 collect_cnt = 5;
  bool liked = 6;
  bool collected = 7;
}

message GetResponse {
  Interactive intr = 1;
}

message MustBatchGetRequest {
  string biz = 1;
  repeated int64 ids = 2;
}
message MustBatchGetResponse {
  repeated Interactive intrs = 1;
}

message GetByIDsRequest {
  string biz = 1;
  repeated int64 ids = 2;
}
message GetByIDsResponse {
  map<int64, Interactive> intrs = 1;
}

message GetTopLikeRequest {
  string biz = 1;
  int32 limit = 2;
}

message GetTopLikeResponse {
  repeated int64 ids = 2;
}

